syntax = "proto3";

package pb;

option go_package = "github.com/DebdipWritesCode/MUN_Scoresheet/backend/pb";

message VerifyEmailRequest {
  int32 token = 1;
}

message VerifyEmailResponse {
  string message = 1;
}